[project]
name = "asciiart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.9.0",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "osmnx>=2.0.4",
    "pandas>=2.3.0",
    "pyscipopt>=5.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
]
